国際化着手

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,6 @@
-#Fri Nov 26 17:55:28 JST 2010
+#Sun Mar 27 05:25:20 JST 2011
 eclipse.preferences.version=1
+encoding//war/niwaruka/member/nav.jsp=UTF-8
 encoding//war/shared/footer.jsp=UTF-8
 encoding//war/shared/header.jsp=UTF-8
 encoding/<project>=UTF-8
