--- a/.classpath
+++ b/.classpath
@@ -6,6 +6,7 @@
 	<classpathentry kind="lib" path="war/WEB-INF/lib/jsonic-1.2.4.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/twitter4j-core-2.1.6.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/slim3-1.0.8.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/scribe-0.6.6.jar"/>
 	<classpathentry kind="src" path=".apt_generated">
 		<attributes>
 			<attribute name="optional" value="true"/>
