--- a/war/auth/linkedin.properties
+++ b/war/auth/linkedin.properties
@@ -1,5 +1,5 @@
-consumer.key=<Consumer Key>
-consumer.secret=<Consumer Secret Key>
+consumer.key=6J9d1qcpe3JzWAda6b61nQ_1BT2evXfEgK1wH3wdAVxCmd0W3Rj2MJuNhUV1Exfo
+consumer.secret=WjJcfwkCY7l3zDqSmgA_9j94VGLhAO38Iz7NcndOr6bu5PtM3fPfoldbzJPlZsdX
 request.token.verb=POST
 request.token.url=https://www.linkedin.com/uas/oauth/requestToken
 access.token.verb=POST
