--- a/.settings/org.eclipse.jdt.apt.core.prefs
+++ b/.settings/org.eclipse.jdt.apt.core.prefs
@@ -1,5 +1,5 @@
-#Thu Oct 28 14:48:15 JST 2010
+#Mon Apr 25 13:54:32 JST 2011
 eclipse.preferences.version=1
 org.eclipse.jdt.apt.aptEnabled=true
-org.eclipse.jdt.apt.genSrcDir=apt_generated
+org.eclipse.jdt.apt.genSrcDir=src
 org.eclipse.jdt.apt.reconcileEnabled=false
